<resources>
    <string name="app_name">Project</string>
    <string name="attendance">Attendence</string>
    <string name="home">Home</string>
    <string name="making_life_easier">Making Life Easier</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="show">Download</string>
    <string name="bitmap">BITMAP</string>
    <string name="uri">URI</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="pass">Password</string>
    <string name="email">    Email</string>
    <string name="login">Login</string>
    <string name="sign">Forget Password</string>
    <string name="f">Forget Password</string>
    <string name="navigation_open">Open Navigation Drawer</string>
    <string name="navigation_close">Close Navigation Drawer</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="Sign">Sign in</string>
    <string name="welcome1">Welcome Back!</string>
    <string name="btn_string">Capture</string>
    <string name="show_image_info">Info</string>
    <string name="show_image_text">1.Take an Image</string>
    <string name="show_image_text1">2. Enter data Manually</string>
    <string name="show_image_detection">Check the Image. If the detection is wrong, then please try again!</string>
    <string name="btn_back">Back to the Home Screen</string>
    <string name="btn_string_manuall">Enter data</string>
    <string name="data">Enter Info</string>
    <string name="cid">Enter Course ID</string>
    <string name="cname">Enter Course Name</string>
    <string name="mark">Mark Attendance</string>
    <string name="sname">Enter Student Name</string>
    <string name="sid">Enter Student ID</string>
    <string name="status">Enter Status</string>
    <string name="back_to_home">Home</string>
    <string name="emailhints">huzaifmalik47@gmail.com</string>
    <string name="Upload">"Upload "</string>
    <string name="Records">Records</string>
    <string name="Edit_Records">Edit Records</string>
    <string name="title_activity_c_s351">Sign in</string>
    <string name="Notes">Notes</string>
    <string name="todo">To-do</string>
    <string name="User_database">User Databse</string>

</resources>
