<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:background="@drawable/scroll"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:paddingLeft="24dp"
        android:paddingTop="56dp"
        android:paddingRight="24dp">

        <ImageView
            android:layout_width="267dp"
            android:layout_height="166dp"
            android:layout_gravity="left"
            android:layout_marginBottom="24dp"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo"
            android:gravity="left"
            android:textColor="@color/white"
            android:text="@string/welcome1"
            android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:fontFamily="@font/baloo"
            android:text="@string/Sign"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="356dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:autofillHints="@string/emailhints"
            android:background="@drawable/emailshape"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:fontFamily="sans-serif-medium"
            android:hint=" Email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/color2"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="356dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:autofillHints="@string/email"
            android:background="@drawable/emailshape"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:fontFamily="sans-serif-medium"
            android:hint=" Password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/color2"
            android:textSize="14sp"
            app:passwordToggleEnabled="true" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="124dp"
            android:layout_height="47dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/buttonstates"
            android:padding="12dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="209dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/buttonstates"
            android:padding="12dp"
            android:text="@string/sign"
            android:textColor="@color/white"
            android:textSize="12sp" />


    </LinearLayout>


</ScrollView>