<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:paddingLeft="24dp"
        android:paddingTop="56dp"
        android:paddingRight="24dp">

        <ImageView
            android:layout_width="206dp"
            android:layout_height="142dp"
            android:layout_gravity="left"
            android:layout_marginBottom="24dp"
            android:src="@drawable/dataentry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo"
            android:gravity="left"
            android:text="@string/data"
            android:textSize="40sp" />


        <EditText
            android:id="@+id/input_c"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="356dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/emailshape"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/cid"
            android:inputType="text"
            android:textColor="@color/color2"
            android:textColorHint="@color/color2"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input_coursename"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="356dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/emailshape"
            android:fontFamily="sans-serif-medium"

            android:hint="@string/cname"
            android:inputType="text"
            android:textColor="@color/color2"
            android:textColorHint="@color/color2"
            android:textStyle="bold"
            app:passwordToggleEnabled="true" />

        <EditText
            android:id="@+id/input_sname"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="356dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"

            android:layout_marginBottom="8dp"
            android:background="@drawable/emailshape"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/sname"
            android:inputType="text"
            android:textColor="@color/color2"
            android:textColorHint="@color/color2"
            android:textStyle="bold"
            app:passwordToggleEnabled="true" />

        <EditText
            android:id="@+id/input_sid"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            android:layout_width="356dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/emailshape"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/sid"
            android:inputType="text"
            android:textColor="@color/color2"
            android:textColorHint="@color/color2"
            android:textStyle="bold"
            app:passwordToggleEnabled="true" />

        <EditText
            android:id="@+id/input_status"

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="356dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/emailshape"
            android:fontFamily="sans-serif-medium"

            android:hint="@string/status"
            android:inputType="text"
            android:textColor="@color/color2"
            android:textColorHint="@color/color2"
            android:textStyle="bold"
            app:passwordToggleEnabled="true" />

        <Button
            android:id="@+id/btn_data"
            android:layout_width="124dp"
            android:layout_height="47dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"

            android:layout_marginBottom="24dp"
            android:background="@drawable/buttonstates"
            android:padding="12dp"
            android:text="@string/Upload"
            android:textColor="@color/color2"
            android:textSize="15sp" />


    </LinearLayout>


</ScrollView>