<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/scoll_user"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.Project.Detection"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
>

        <ImageView
            android:id="@+id/bitmap_v"
            android:layout_width="312dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:padding="20dp"
            android:src="@drawable/facemask" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40dp"
            android:id="@+id/detecetd_name"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:fontFamily="@font/baloo"
            android:text="@string/show_image_info" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-black"
            android:text="@string/show_image_detection"
            android:textAlignment="center"
            android:textSize="20sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/input1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="184dp"
                android:layout_height="70dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/emailshape"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/cid"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="@color/color2"
                android:textColorHint="@color/color2"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/input2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="184dp"
                android:layout_height="70dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/emailshape"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/cname"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="@color/color2"
                android:textColorHint="@color/color2"
                android:textSize="12sp"
                app:passwordToggleEnabled="true" />

        </LinearLayout>


        <RelativeLayout
            android:layout_width="367dp"
            android:layout_height="76dp">

            <EditText
                android:id="@+id/input3"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="356dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/emailshape"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/sid"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="@color/color2"
                android:textColorHint="@color/color2"
                android:textSize="12sp" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <Button
                android:id="@+id/upload"
                android:layout_width="124dp"
                android:layout_height="47dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="44dp"
                android:background="@drawable/buttonstates"
                android:text="upload"
                android:textColor="@color/color2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/home"
                android:layout_width="131dp"
                android:layout_height="76dp"
                android:layout_gravity="center"
                android:background="@drawable/home"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/up" />
        </LinearLayout>


    </LinearLayout>


</ScrollView>